# about-me

./: .gitignore  Makefile  README.md  audit_pipeline.py  requirements.txt
ai-failure-gates/: README.md  uncertainty_gatekeeper.py
ai-failure-gates/CLG/: README.md
ai-failure-gates/fail_closed_gate/: README.md  app_streamlit.py  gate.py
artifacts/document-gate/: README.md  gate.py
artifacts/epistemic-instruments/: README.md
audits/: 2026_Q1_Proof_of_Allocation_Null_Identifier.md  ai_capability_boundary_map.md  corporate_hiring_pipeline_audit.md  supplement-illusion_fitness-influencer-audit_white-paper.md  systemic-failure-grammar.md
audits/cases/: 2026_Sioux_Falls_Shape_2050_Correspondence.md
audits/frameworks/: unicode_tag_token_amplification_analysis.md
probes/: README.md  ai_cost_surface_probe_v1.py  ai_enterprise_billing_probe_v2.py  api_contract_behavior.py
probes/universal-opacity/: SAVE_PACK.txt  api_contract_behavior.py  cross_domain_opacity_findings.md
prototypes/: rap_stress_harness.py
tests/: test_funding_audit.py
tools/: macro_engine_v2.1.py  macro_engine_v2.py
tools/autonomous-coordination/: README.md  schelling_lighthouse.py
tools/funding-analysis/: INCIDENT_REPORT.md  README.md  allocation_extraction.py  audit_pipeline.py
work-samples/: failure_oracle.ipynb  killing-bad-ideas-early.md
work-samples/text-scalpel/: README.md  pyproject.toml  vetos_proof_003_transaction_completeness.py
work-samples/text-scalpel/.github/workflows/: pypi-publish.yml
work-samples/text-scalpel/src/text_scalpel/: __init__.py  api.py  core.py  ui.py
(+14 files in other folders)
