[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "text_scalpel"
version = "3.0.0"
description = "Enterprise Code Injection Engine for surgical source code modifications."
authors = [
    { name="Developer", email="dev@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "ipywidgets",
    "pydantic"
]

[project.urls]
"Homepage" = "https://github.com/example/text-scalpel"
"Bug Tracker" = "https://github.com/example/text-scalpel/issues"
